root/apps/services/qmeet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: qmeet, namespace: platform }
spec:
  replicas: 1
  selector: { matchLabels: { app: qmeet } }
  template:
    metadata: { labels: { app: qmeet } }
    spec:
      containers:
        - name: qmeet
          image: rg.fr-par.scw.cloud/pandormedia/qoffice-qmeet:preprod-latest
          ports: [ { containerPort: 8080 } ]
